src/components/footer/Footer.css
.bottom {
   padding:20px 0px 10px 0px;
   display:flex;
   background-color:red;
   justify-content:center;
 }

.footer {
   font-size: 12px;
}

.footerLink {
   text-decoration: none;
   color: black;
}
.footerLink:hover {
   text-decoration: underline;
}

